--- a/processing/index.html
+++ b/processing/index.html
@@ -84,7 +84,7 @@
 					<section data-processing>
 						<h2>Getting Started</h2>
 						<canvas></canvas>
-						<textarea data-codemirror="/pde/example-1.pde"></textarea>
+						<textarea data-codemirror="/processing/pde/example-1.pde"></textarea>
 					</section>
 				</section>
 
