--- a/processing/index.html
+++ b/processing/index.html
@@ -119,7 +119,7 @@
 
 						<aside class="notes">
 							<p>There are loads of tools freely available for exploring the world of algorithmic visual art. These tools fall in to two main categories.</p>
-							<p>Applications: These tools provide a graphical interface for building and experimenting with visualizations.</p>
+							<p>Applications: These tools provide a graphical interface for building and experimenting with visualizations.<br /> vvvv (vier V; German)</p>
 							<p>Programming Libraries: There are a number of libraries and languages that help facilitate the creation of creative works.
 							Cinder, and OpenFrameworks are both C++ libraries that provide a myriad of tools for building audio/visual applications.
 							Processing, which we'll be looking at today, provides its own platform (on top of Java) and attempts to lower the barrier of entry for creating visual works.</p>
@@ -171,40 +171,98 @@
 					</section>
 				</section>
 				
-<!-- 
+
 				<section>
 					<section data-processing>
-						<h2>Getting Started</h2>
+						<h2>Playing with Lines</h2>
 						<canvas></canvas>
-						<textarea data-codemirror="/processing/pde/example-1.pde"></textarea>
+						<textarea data-codemirror="/processing/pde/line-1.pde"></textarea>
 					</section>
 
-					<section data-processing data-processing-url="/processing/pde/example-1.pde">
-						<h2>Getting Started</h2>
+					<section data-processing>
+						<h2>Playing with Lines</h2>
+						<canvas></canvas>
+						<textarea data-codemirror="/processing/pde/line-2.pde"></textarea>
+					</section>
+
+					<section data-processing>
+						<h2>Playing with Lines</h2>
+						<canvas></canvas>
+						<textarea data-codemirror="/processing/pde/line-2b.pde"></textarea>
+					</section>
+
+					<section data-processing>
+						<h2>Playing with Lines</h2>
+						<canvas></canvas>
+						<textarea data-codemirror="/processing/pde/line-3.pde"></textarea>
+					</section>
+
+					<section data-processing data-processing-url="/processing/pde/line-3-full.pde">
 						<canvas class="fullscreen"></canvas>
 					</section>
-				</section> -->
+				</section>
 
 				<section>
 					<section data-processing>
+						<h2>Cells</h2>
 						<canvas></canvas>
-						<textarea data-codemirror="/processing/pde/samples-1.pde"></textarea>
+						<textarea data-codemirror="/processing/pde/cells-1.pde"></textarea>
 					</section>
 
 					<section data-processing>
+						<h2>Cells</h2>
 						<canvas></canvas>
-						<textarea data-codemirror="/processing/pde/samples-2.pde"></textarea>
+						<textarea data-codemirror="/processing/pde/cells-2.pde"></textarea>
 					</section>
 
 					<section data-processing>
+						<h2>Cells</h2>
 						<canvas></canvas>
-						<textarea data-codemirror="/processing/pde/samples-3.pde"></textarea>
+						<textarea data-codemirror="/processing/pde/cells-3.pde"></textarea>
+					</section>
+
+					<section data-processing data-processing-url="/processing/pde/cells-3-full.pde">
+						<canvas class="fullscreen"></canvas>
+					</section>
+				</section>
+
+
+				<section>
+					<section data-processing>
+						<h2>Single Branching Fractal</h2>
+						<canvas></canvas>
+						<textarea data-codemirror="/processing/pde/fractal-1.pde"></textarea>
+					</section>
+
+					<section data-processing>
+						<h2>Single Branching Fractal</h2>
+						<canvas></canvas>
+						<textarea data-codemirror="/processing/pde/fractal-2.pde"></textarea>
+					</section>
+
+					<section data-processing data-processing-url="/processing/pde/fractal-2-full.pde">
+						<canvas class="fullscreen"></canvas>
 					</section>
 				</section>
 
 				<section>
-					<iframe src="http://player.vimeo.com/video/33240217?color=ffffff" width="1024" height="768" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+					<section data-processing data-processing-url="/processing/pde/abstract01.pde">
+						<canvas class="fullscreen"></canvas>
+					</section>
+					<section data-processing data-processing-url="/processing/pde/abstract01-interactive.pde">
+						<canvas class="fullscreen"></canvas>
+					</section>
 				</section>
+
+				<section>
+					<iframe src="http://player.vimeo.com/video/646107?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="1024" height="575" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+				</section>
+
+				<section>
+					<iframe src="http://player.vimeo.com/video/33240217?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="1024" height="570" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+				</section>
+
+
 				<section>
 					<h1>THE END</h1>
 					<h3>Questions?</h3>
