Links and final touches to Processing talk

--- a/processing/index.html
+++ b/processing/index.html
@@ -262,9 +262,18 @@
 					<iframe src="http://player.vimeo.com/video/33240217?title=0&amp;byline=0&amp;portrait=0&amp;color=ff9933" width="1024" height="570" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 				</section>
 
+				<section>
+					<h2>Links</h2>
+					<ul>
+						<li><a href="http://processing.org/">Processing Website</a></li>
+						<li><a href="http://processing.org/reference/">Processing Reference</a></li>
+						<li><a href="http://zenbullets.com/book.php">Generative Art: A Practical Guide Using Processing</a></li>
+						<li><a href="http://abandonedart.org/">AbandondedArt.org</a></li>
+					</ul>
+				</section>
 
 				<section>
-					<h1>THE END</h1>
+					<h1>Thank You</h1>
 					<h3>Questions?</h3>
 				</section>
 
