Open links in new window.

--- a/processing/index.html
+++ b/processing/index.html
@@ -265,10 +265,10 @@
 				<section>
 					<h2>Links</h2>
 					<ul>
-						<li><a href="http://processing.org/">Processing Website</a></li>
-						<li><a href="http://processing.org/reference/">Processing Reference</a></li>
-						<li><a href="http://zenbullets.com/book.php">Generative Art: A Practical Guide Using Processing</a></li>
-						<li><a href="http://abandonedart.org/">AbandondedArt.org</a></li>
+						<li><a href="http://processing.org/" target="_blank">Processing Website</a></li>
+						<li><a href="http://processing.org/reference/" target="_blank">Processing Reference</a></li>
+						<li><a href="http://zenbullets.com/book.php" target="_blank">Generative Art: A Practical Guide Using Processing</a></li>
+						<li><a href="http://abandonedart.org/" target="_blank">AbandondedArt.org</a></li>
 					</ul>
 				</section>
 
